# structured-logging-system

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-python.yml  ci.yml  dependabot-auto-merge.yml  release-drafter.yml  security.yml  stale.yml
assets/screenshots/: README.md
python/: example.py  logger.py
tests/: test_logger.py
